fix scrollbar overflow

--- a/src/app/content/feed/feed.component.scss
+++ b/src/app/content/feed/feed.component.scss
@@ -14,6 +14,12 @@
   display: flex;
   padding: 1rem;
   background-color: #242424;
+  overflow-x: hidden !important;
+  overflow-y: scroll !important;
+}
+
+.event-container::-webkit-scrollbar {
+  display: none !important;
 }
 
 .author {
